printing url at each test

--- a/q_learning/lunar_lander_dqn.ipynb
+++ b/q_learning/lunar_lander_dqn.ipynb
@@ -267,19 +267,14 @@
      "output_type": "stream",
      "text": [
       "Training for 10000 steps.\n",
-      "Avg return in last 5 episodes: -284.722\t5th episode return: -488.03\t Steps: 468\n",
-      "Avg return in last 10 episodes: -222.597\t10th episode return: -50.4032\t Steps: 986\n",
-      "Avg return in last 15 episodes: -214.767\t15th episode return: -257.857\t Steps: 1543\n",
-      "Avg return in last 20 episodes: -237.452\t20th episode return: -299.66\t Steps: 2182\n",
-      "Avg return in last 25 episodes: -229.018\t25th episode return: -69.8594\t Steps: 2710\n",
-      "Avg return in last 30 episodes: -228.616\t30th episode return: -126.706\t Steps: 3442\n",
-      "Avg return in last 35 episodes: -219.267\t35th episode return: -175.728\t Steps: 4037\n",
-      "Avg return in last 40 episodes: -202.473\t40th episode return: -61.6095\t Steps: 4719\n",
-      "Avg return in last 45 episodes: -193.164\t45th episode return: -225.985\t Steps: 5232\n",
-      "Avg return in last 50 episodes: -194.389\t50th episode return: -275.596\t Steps: 6061\n",
-      "Avg return in last 50 episodes: -173.883\t55th episode return: -97.9969\t Steps: 7916\n",
-      "Avg return in last 50 episodes: -175.869\t60th episode return: -96.9271\t Steps: 8860\n",
-      "Avg return in last 50 episodes: -166.472\t65th episode return: 118.87\t Steps: 10819\n"
+      "Avg return in last 5 episodes: -194.18\t5th episode return: -153.237\t Steps: 441\n",
+      "Avg return in last 10 episodes: -182.628\t10th episode return: -101.164\t Steps: 1028\n",
+      "Avg return in last 15 episodes: -177.656\t15th episode return: -200.554\t Steps: 1764\n",
+      "Avg return in last 20 episodes: -165.164\t20th episode return: -195.816\t Steps: 2742\n",
+      "Avg return in last 25 episodes: -173.573\t25th episode return: -318.202\t Steps: 3718\n",
+      "Avg return in last 30 episodes: -166.942\t30th episode return: -79.2901\t Steps: 4654\n",
+      "Avg return in last 35 episodes: -159.46\t35th episode return: -75.691\t Steps: 5423\n",
+      "Avg return in last 40 episodes: -151.316\t40th episode return: -149.785\t Steps: 6649\n"
      ]
     }
    ],
@@ -304,13 +299,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Total steps: 165\t Total reward: -51.3545\n"
+      " Total steps: 687\t Total reward: -461.826\n",
+      "https://gym.kurg.org/dd6d73ef7b7f4/output.webm"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20070cd5b03f49249cd41a9c005af440",
+       "model_id": "2be452d32538455c9c6b59416d7a9868",
        "version_major": 2,
        "version_minor": 0
       },
@@ -367,7 +363,7 @@
     "\n",
     "envTest.close();\n",
     "std::string url = envTest.url();\n",
-    "\n",
+    "std::cout << url;\n",
     "auto video = xw::video_from_url(url).finalize();\n",
     "video"
    ]
@@ -389,53 +385,53 @@
      "output_type": "stream",
      "text": [
       "Training for 100000 steps.\n",
-      "Avg return in last 50 episodes: -150.198\t70th episode return: -89.2092\t Steps: 13028\n",
-      "Avg return in last 50 episodes: -155.74\t75th episode return: -23.7489\t Steps: 15029\n",
-      "Avg return in last 50 episodes: -149.012\t80th episode return: -211.166\t Steps: 16341\n",
-      "Avg return in last 50 episodes: -156.946\t85th episode return: -227.523\t Steps: 17199\n",
-      "Avg return in last 50 episodes: -165.563\t90th episode return: -37.9676\t Steps: 18004\n",
-      "Avg return in last 50 episodes: -162.041\t95th episode return: -39.4172\t Steps: 19212\n",
-      "Avg return in last 50 episodes: -164.412\t100th episode return: -424.532\t Steps: 19981\n",
-      "Avg return in last 50 episodes: -173.323\t105th episode return: -40.9453\t Steps: 22067\n",
-      "Avg return in last 50 episodes: -161.326\t110th episode return: -150.18\t Steps: 24134\n",
-      "Avg return in last 50 episodes: -161.814\t115th episode return: -159.1\t Steps: 26374\n",
-      "Avg return in last 50 episodes: -156.914\t120th episode return: -278.149\t Steps: 27964\n",
-      "Avg return in last 50 episodes: -164.541\t125th episode return: -18.0229\t Steps: 29049\n",
-      "Avg return in last 50 episodes: -165.112\t130th episode return: -44.7807\t Steps: 30669\n",
-      "Avg return in last 50 episodes: -152.749\t135th episode return: -5.52039\t Steps: 32498\n",
-      "Avg return in last 50 episodes: -151.152\t140th episode return: -181.733\t Steps: 33290\n",
-      "Avg return in last 50 episodes: -154.841\t145th episode return: -76.0916\t Steps: 34461\n",
-      "Avg return in last 50 episodes: -145.631\t150th episode return: -268.096\t Steps: 36679\n",
-      "Avg return in last 50 episodes: -140.865\t155th episode return: -224.352\t Steps: 38962\n",
-      "Avg return in last 50 episodes: -149.099\t160th episode return: 32.8503\t Steps: 40415\n",
-      "Avg return in last 50 episodes: -166.081\t165th episode return: -345.188\t Steps: 41365\n",
-      "Avg return in last 50 episodes: -168.507\t170th episode return: -2.32903\t Steps: 42319\n",
-      "Avg return in last 50 episodes: -159.061\t175th episode return: -279.514\t Steps: 43988\n",
-      "Avg return in last 50 episodes: -147.82\t180th episode return: -145.936\t Steps: 45600\n",
-      "Avg return in last 50 episodes: -163.363\t185th episode return: -359.342\t Steps: 46877\n",
-      "Avg return in last 50 episodes: -155.136\t190th episode return: 114.854\t Steps: 49150\n",
-      "Avg return in last 50 episodes: -153.039\t195th episode return: -9.81771\t Steps: 50288\n",
-      "Avg return in last 50 episodes: -158.38\t200th episode return: -282.745\t Steps: 51375\n",
-      "Avg return in last 50 episodes: -156.798\t205th episode return: 69.8839\t Steps: 53838\n",
-      "Avg return in last 50 episodes: -163.093\t210th episode return: -355.809\t Steps: 55658\n",
-      "Avg return in last 50 episodes: -150.375\t215th episode return: -232.851\t Steps: 57720\n",
-      "Avg return in last 50 episodes: -152.227\t220th episode return: -72.3069\t Steps: 59657\n",
-      "Avg return in last 50 episodes: -137.959\t225th episode return: -266.234\t Steps: 61246\n",
-      "Avg return in last 50 episodes: -140.269\t230th episode return: -250.204\t Steps: 63513\n",
-      "Avg return in last 50 episodes: -125.516\t235th episode return: -397.982\t Steps: 66431\n",
-      "Avg return in last 50 episodes: -119.547\t240th episode return: 2.22265\t Steps: 68185\n",
-      "Avg return in last 50 episodes: -113.76\t245th episode return: 18.3692\t Steps: 70181\n",
-      "Avg return in last 50 episodes: -95.7064\t250th episode return: 235.291\t Steps: 73477\n",
-      "Avg return in last 50 episodes: -81.8454\t255th episode return: -106.881\t Steps: 76288\n",
-      "Avg return in last 50 episodes: -63.3723\t260th episode return: 9.42518\t Steps: 79212\n",
-      "Avg return in last 50 episodes: -42.1539\t265th episode return: 183.974\t Steps: 83346\n",
-      "Avg return in last 50 episodes: -26.4426\t270th episode return: -103.536\t Steps: 85621\n",
-      "Avg return in last 50 episodes: -27.6972\t275th episode return: -236.068\t Steps: 86919\n",
-      "Avg return in last 50 episodes: -20.8178\t280th episode return: -251.282\t Steps: 89798\n",
-      "Avg return in last 50 episodes: -20.9476\t285th episode return: -171.831\t Steps: 91316\n",
-      "Avg return in last 50 episodes: -16.5527\t290th episode return: 220.264\t Steps: 94216\n",
-      "Avg return in last 50 episodes: -5.96564\t295th episode return: 85.4784\t Steps: 97154\n",
-      "Avg return in last 50 episodes: -19.3297\t300th episode return: -6.2327\t Steps: 100256\n"
+      "Avg return in last 45 episodes: -146.766\t45th episode return: -252.637\t Steps: 10917\n",
+      "Avg return in last 50 episodes: -141.891\t50th episode return: 18.9724\t Steps: 13376\n",
+      "Avg return in last 50 episodes: -137.465\t55th episode return: -238.157\t Steps: 17036\n",
+      "Avg return in last 50 episodes: -125.792\t60th episode return: -45.9381\t Steps: 19453\n",
+      "Avg return in last 50 episodes: -123.141\t65th episode return: -175.618\t Steps: 20381\n",
+      "Avg return in last 50 episodes: -115.198\t70th episode return: -144.099\t Steps: 21934\n",
+      "Avg return in last 50 episodes: -101.778\t75th episode return: -12.9555\t Steps: 23576\n",
+      "Avg return in last 50 episodes: -97.059\t80th episode return: -61.9758\t Steps: 24151\n",
+      "Avg return in last 50 episodes: -96.595\t85th episode return: 75.604\t Steps: 25536\n",
+      "Avg return in last 50 episodes: -104.601\t90th episode return: -81.2942\t Steps: 26192\n",
+      "Avg return in last 50 episodes: -105.909\t95th episode return: -284.902\t Steps: 26709\n",
+      "Avg return in last 50 episodes: -122.314\t100th episode return: -167.313\t Steps: 27706\n",
+      "Avg return in last 50 episodes: -131.519\t105th episode return: -187.552\t Steps: 28237\n",
+      "Avg return in last 50 episodes: -150.171\t110th episode return: -103.857\t Steps: 29457\n",
+      "Avg return in last 50 episodes: -147.951\t115th episode return: -5.78733\t Steps: 30393\n",
+      "Avg return in last 50 episodes: -166.214\t120th episode return: -190.074\t Steps: 32107\n",
+      "Avg return in last 50 episodes: -167.236\t125th episode return: 65.5197\t Steps: 34950\n",
+      "Avg return in last 50 episodes: -170.725\t130th episode return: -48.0405\t Steps: 36624\n",
+      "Avg return in last 50 episodes: -163.04\t135th episode return: -215.628\t Steps: 38524\n",
+      "Avg return in last 50 episodes: -156.002\t140th episode return: 165.064\t Steps: 40379\n",
+      "Avg return in last 50 episodes: -135.442\t145th episode return: 109.519\t Steps: 44068\n",
+      "Avg return in last 50 episodes: -126.53\t150th episode return: 199.944\t Steps: 45551\n",
+      "Avg return in last 50 episodes: -104.077\t155th episode return: -357.923\t Steps: 47852\n",
+      "Avg return in last 50 episodes: -91.0401\t160th episode return: -222.917\t Steps: 50076\n",
+      "Avg return in last 50 episodes: -91.4271\t165th episode return: -270.977\t Steps: 51663\n",
+      "Avg return in last 50 episodes: -68.8402\t170th episode return: 55.9556\t Steps: 53343\n",
+      "Avg return in last 50 episodes: -83.2142\t175th episode return: -421.189\t Steps: 54431\n",
+      "Avg return in last 50 episodes: -72.4118\t180th episode return: 165.86\t Steps: 56374\n",
+      "Avg return in last 50 episodes: -74.5264\t185th episode return: -36.6648\t Steps: 57684\n",
+      "Avg return in last 50 episodes: -61.4636\t190th episode return: 181.57\t Steps: 59372\n",
+      "Avg return in last 50 episodes: -68.5421\t195th episode return: 165.867\t Steps: 61260\n",
+      "Avg return in last 50 episodes: -50.5869\t200th episode return: 40.779\t Steps: 64009\n",
+      "Avg return in last 50 episodes: -53.2368\t205th episode return: -50.6624\t Steps: 65820\n",
+      "Avg return in last 50 episodes: -52.5131\t210th episode return: -162.749\t Steps: 68590\n",
+      "Avg return in last 50 episodes: -41.8541\t215th episode return: 14.8803\t Steps: 72180\n",
+      "Avg return in last 50 episodes: -30.7785\t220th episode return: 6.79227\t Steps: 74395\n",
+      "Avg return in last 50 episodes: -1.95187\t225th episode return: 174.842\t Steps: 77527\n",
+      "Avg return in last 50 episodes: -13.0044\t230th episode return: 56.6118\t Steps: 79326\n",
+      "Avg return in last 50 episodes: -0.523694\t235th episode return: 247.687\t Steps: 82026\n",
+      "Avg return in last 50 episodes: -30.1152\t240th episode return: -527.729\t Steps: 83427\n",
+      "Avg return in last 50 episodes: -25.7664\t245th episode return: 111.978\t Steps: 87699\n",
+      "Avg return in last 50 episodes: -30.2046\t250th episode return: 93.8517\t Steps: 91924\n",
+      "Avg return in last 50 episodes: -35.8337\t255th episode return: -22.3572\t Steps: 92718\n",
+      "Avg return in last 50 episodes: -26.2266\t260th episode return: -4.23359\t Steps: 93757\n",
+      "Avg return in last 50 episodes: -26.4095\t265th episode return: 248.435\t Steps: 95390\n",
+      "Avg return in last 50 episodes: -55.9441\t270th episode return: -337.312\t Steps: 97387\n",
+      "Avg return in last 50 episodes: -65.3774\t275th episode return: 154.82\t Steps: 100098\n"
      ]
     }
    ],
@@ -454,20 +450,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Total steps: 526\t Total reward: 234.908\n"
+      " Total steps: 400\t Total reward: 205.182\n",
+      "https://gym.kurg.org/dd039a77afe24/output.webm"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3484af834b04d55b351f9f930e88f9e",
+       "model_id": "43df1d85fb2c430e872fab5d54d4b311",
        "version_major": 2,
        "version_minor": 0
       },
@@ -475,7 +472,7 @@
        "A Jupyter widget"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +521,7 @@
     "\n",
     "envTest.close();\n",
     "std::string url = envTest.url();\n",
-    "\n",
+    "std::cout << url;\n",
     "auto video = xw::video_from_url(url).finalize();\n",
     "video"
    ]
