added missing imports and missing functions

--- a/q_learning/pendulum_sac.ipynb
+++ b/q_learning/pendulum_sac.ipynb
@@ -35,35 +35,19 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "input_line_8:2:10: fatal error: 'mlpack/methods/reinforcement_learning/sac.hpp' file not found\n",
-      "#include <mlpack/methods/reinforcement_learning/sac.hpp>\n",
-      "         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n"
-     ]
-    },
-    {
-     "ename": "Interpreter Error",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "Interpreter Error: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#include <mlpack/methods/ann/ffn.hpp>\n",
     "#include <mlpack/methods/reinforcement_learning/sac.hpp>\n",
+    "#include <mlpack/methods/ann/loss_functions/empty_loss.hpp>\n",
+    "#include <mlpack/methods/ann/init_rules/gaussian_init.hpp>\n",
     "#include <mlpack/methods/reinforcement_learning/environment/env_type.hpp>\n",
     "#include <mlpack/methods/reinforcement_learning/training_config.hpp>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,12 +167,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "// Set up Soft actor-critic agent.\n",
-    "SAC<Pendulum, decltype(qNetwork), decltype(policyNetwork), AdamUpdate>\n",
+    "SAC<ContinuousActionEnv, decltype(qNetwork), decltype(policyNetwork), AdamUpdate>\n",
     "    agent(config, qNetwork, policyNetwork, replayMethod);"
    ]
   },
@@ -201,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +223,7 @@
     "      arma::mat action = {double(agent.Action().action[0])};\n",
     "\n",
     "      env.step(action);\n",
-    "      DiscreteActionEnv::State nextState;\n",
+    "      ContinuousActionEnv::State nextState;\n",
     "      nextState.Data() = env.observation;\n",
     "\n",
     "      replayMethod.Store(agent.State(), agent.Action(), env.reward, nextState,\n",
@@ -248,7 +232,8 @@
     "      agent.TotalSteps()++;\n",
     "      if (agent.Deterministic() || agent.TotalSteps() < config.ExplorationSteps())\n",
     "        continue;\n",
-    "      agent.TrainAgent();\n",
+    "      for (size_t i = 0; i < config.UpdateInterval(); i++)\n",
+    "        agent.Update();\n",
     "    } while (!env.done);\n",
     "    returnList.push_back(episodeReturn);\n",
     "    episodes += 1;\n",
@@ -279,9 +264,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training for 5000 steps.\n",
+      "Avg return in last 4 episodes: -1501.84\t Episode return: -1119.03\t Total steps: 800\n",
+      "Avg return in last 8 episodes: -1366.02\t Episode return: -1052.02\t Total steps: 1600\n",
+      "Avg return in last 12 episodes: -1312.24\t Episode return: -1058.17\t Total steps: 2400\n",
+      "Avg return in last 16 episodes: -1252.54\t Episode return: -912.18\t Total steps: 3200\n",
+      "Avg return in last 20 episodes: -1191.98\t Episode return: -1057.22\t Total steps: 4000\n",
+      "Avg return in last 24 episodes: -1155.03\t Episode return: -883.058\t Total steps: 4800\n"
+     ]
+    }
+   ],
    "source": [
     "// Training the agent for a total of at least 5000 steps.\n",
     "train(5000)"
@@ -296,9 +295,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Total steps: 200\t Total reward: -1162.06\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3f28adf3dd8046f28e47f34faa01e3ea",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter widget"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "agent.Deterministic() = true;\n",
     "\n",
@@ -359,7 +381,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training for 20000 steps.\n",
+      "Avg return in last 28 episodes: -1115.4\t Episode return: -832.873\t Total steps: 5600\n"
+     ]
+    }
+   ],
    "source": [
     "// Training the same agent for a total of at least 20000 steps.\n",
     "train(20000)"
