Made the notebook ready to run

--- a/reinforcement_learning_gym/bipedal_walker_sac.ipynb
+++ b/reinforcement_learning_gym/bipedal_walker_sac.ipynb
@@ -130,17 +130,17 @@
     "// Set up the actor and critic networks.\n",
     "FFN<EmptyLoss<>, GaussianInitialization>\n",
     "    policyNetwork(EmptyLoss<>(), GaussianInitialization(0, 0.1));\n",
-    "policyNetwork.Add(new Linear<>(ContinuousActionEnv::State::dimension, 128));\n",
+    "policyNetwork.Add(new Linear<>(ContinuousActionEnv::State::dimension, 64));\n",
     "policyNetwork.Add(new ReLULayer<>());\n",
-    "policyNetwork.Add(new Linear<>(128, ContinuousActionEnv::Action::size));\n",
+    "policyNetwork.Add(new Linear<>(64, ContinuousActionEnv::Action::size));\n",
     "policyNetwork.Add(new TanHLayer<>());\n",
     "\n",
     "FFN<EmptyLoss<>, GaussianInitialization>\n",
     "    qNetwork(EmptyLoss<>(), GaussianInitialization(0, 0.1));\n",
     "qNetwork.Add(new Linear<>(ContinuousActionEnv::State::dimension +\n",
-    "                          ContinuousActionEnv::Action::size, 128));\n",
+    "                          ContinuousActionEnv::Action::size, 64));\n",
     "qNetwork.Add(new ReLULayer<>());\n",
-    "qNetwork.Add(new Linear<>(128, 1));"
+    "qNetwork.Add(new Linear<>(64, 1));"
    ]
   },
   {
@@ -161,6 +161,7 @@
    "source": [
     "// Set up training configurations.\n",
     "TrainingConfig config;\n",
+    "config.ExplorationSteps() = 3200;\n",
     "config.TargetNetworkSyncInterval() = 1;\n",
     "config.UpdateInterval() = 1;"
    ]
@@ -205,6 +206,84 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Total steps: 106\t Total reward: -93.3435\n",
+      "https://gym.kurg.org/a5eb46caf7934/output.webm"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a6baaa44ffea47c2a3279f78feeb4849",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter widget"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agent.Deterministic() = true;\n",
+    "\n",
+    "// Creating and setting up the gym environment for testing.\n",
+    "gym::Environment envTest(\"gym.kurg.org\", \"4040\", \"BipedalWalker-v3\");\n",
+    "envTest.monitor.start(\"./dummy/\", true, true);\n",
+    "\n",
+    "// Resets the environment.\n",
+    "envTest.reset();\n",
+    "envTest.render();\n",
+    "\n",
+    "double totalReward = 0;\n",
+    "size_t totalSteps = 0;\n",
+    "\n",
+    "// Testing the agent on gym's environment.\n",
+    "while (1)\n",
+    "{\n",
+    "  // State from the environment is passed to the agent's internal representation.\n",
+    "  agent.State().Data() = envTest.observation;\n",
+    "\n",
+    "  // With the given state, the agent selects an action according to its defined policy.\n",
+    "  agent.SelectAction();\n",
+    "\n",
+    "  // Action to take, decided by the policy.\n",
+    "  arma::mat action = {agent.Action().action};\n",
+    "\n",
+    "  envTest.step(action);\n",
+    "  totalReward += envTest.reward;\n",
+    "  totalSteps += 1;\n",
+    "\n",
+    "  if (envTest.done)\n",
+    "  {\n",
+    "    std::cout << \" Total steps: \" << totalSteps << \"\\t Total reward: \"\n",
+    "        << totalReward << std::endl;\n",
+    "    break;\n",
+    "  }\n",
+    "\n",
+    "  // Uncomment the following lines to see the reward and action in each step.\n",
+    "  // std::cout << \" Current step: \" << totalSteps << \"\\t current reward: \"\n",
+    "  //   << totalReward << \"\\t Action taken: \" << action;\n",
+    "}\n",
+    "\n",
+    "envTest.close();\n",
+    "std::string url = envTest.url();\n",
+    "std::cout << url;\n",
+    "auto video = xw::video_from_url(url).finalize();\n",
+    "video"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "// Function to train the agent on the Bipedal Walker gym environment.\n",
@@ -221,7 +300,7 @@
     "    {\n",
     "      agent.State().Data() = env.observation;\n",
     "      agent.SelectAction();\n",
-    "      arma::mat action = {double(agent.Action().action[0] * 2)};\n",
+    "      arma::mat action = {agent.Action().action};\n",
     "\n",
     "      env.step(action);\n",
     "      ContinuousActionEnv::State nextState;\n",
@@ -267,26 +346,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training for 5000 steps.\n",
-      "Avg return in last 4 episodes: -1110.78\t Episode return: -660.74\t Total steps: 800\n",
-      "Avg return in last 8 episodes: -952.778\t Episode return: -838.488\t Total steps: 1600\n",
-      "Avg return in last 12 episodes: -871.959\t Episode return: -688.612\t Total steps: 2400\n",
-      "Avg return in last 16 episodes: -790.431\t Episode return: -129.354\t Total steps: 3200\n",
-      "Avg return in last 20 episodes: -755.523\t Episode return: -1.9158\t Total steps: 4000\n",
-      "Avg return in last 24 episodes: -693.449\t Episode return: -122.304\t Total steps: 4800\n"
+      "Training for 20000 steps.\n",
+      "Avg return for 1 episodes: -22.4558\t Episode return: -22.4558\t steps: 1600\t Total steps: 1600\n",
+      "Avg return for 2 episodes: -71.2708\t Episode return: -120.086\t steps: 142\t Total steps: 1742\n",
+      "Avg return for 3 episodes: -78.7429\t Episode return: -93.6872\t steps: 87\t Total steps: 1829\n",
+      "Avg return for 4 episodes: -82.537\t Episode return: -93.9192\t steps: 90\t Total steps: 1919\n",
+      "Avg return for 5 episodes: -93.9891\t Episode return: -139.798\t steps: 1389\t Total steps: 3308\n",
+      "Avg return for 6 episodes: -98.9828\t Episode return: -123.951\t steps: 64\t Total steps: 3372\n",
+      "Avg return for 7 episodes: -102.657\t Episode return: -124.699\t steps: 78\t Total steps: 3450\n",
+      "Avg return for 8 episodes: -102.428\t Episode return: -100.828\t steps: 70\t Total steps: 3520\n",
+      "Avg return for 9 episodes: -102.054\t Episode return: -99.0604\t steps: 69\t Total steps: 3589\n",
+      "Avg return for 10 episodes: -102.289\t Episode return: -104.402\t steps: 74\t Total steps: 3663\n",
+      "Avg return for 11 episodes: -102.715\t Episode return: -106.982\t steps: 84\t Total steps: 3747\n",
+      "Avg return for 12 episodes: -110.792\t Episode return: -199.636\t steps: 1280\t Total steps: 5027\n",
+      "Avg return for 13 episodes: -110.528\t Episode return: -107.364\t steps: 58\t Total steps: 5085\n",
+      "Avg return for 14 episodes: -110.644\t Episode return: -112.146\t steps: 60\t Total steps: 5145\n",
+      "Avg return for 15 episodes: -111.534\t Episode return: -123.993\t steps: 1600\t Total steps: 6745\n",
+      "Avg return for 16 episodes: -111.343\t Episode return: -108.476\t steps: 51\t Total steps: 6796\n",
+      "Avg return for 17 episodes: -111.279\t Episode return: -110.269\t steps: 54\t Total steps: 6850\n",
+      "Avg return for 18 episodes: -110.811\t Episode return: -102.84\t steps: 64\t Total steps: 6914\n",
+      "Avg return for 19 episodes: -110.57\t Episode return: -106.231\t steps: 48\t Total steps: 6962\n",
+      "Avg return for 20 episodes: -110.355\t Episode return: -106.28\t steps: 46\t Total steps: 7008\n",
+      "Avg return for 21 episodes: -110.163\t Episode return: -106.323\t steps: 47\t Total steps: 7055\n",
+      "Avg return for 22 episodes: -109.982\t Episode return: -106.188\t steps: 46\t Total steps: 7101\n",
+      "Avg return for 23 episodes: -109.799\t Episode return: -105.761\t steps: 46\t Total steps: 7147\n",
+      "Avg return for 24 episodes: -109.624\t Episode return: -105.59\t steps: 48\t Total steps: 7195\n",
+      "Avg return for 25 episodes: -109.476\t Episode return: -105.931\t steps: 47\t Total steps: 7242\n",
+      "Avg return for 25 episodes: -112.857\t Episode return: -106.977\t steps: 48\t Total steps: 7290\n",
+      "Avg return for 25 episodes: -112.429\t Episode return: -109.385\t steps: 56\t Total steps: 7346\n",
+      "Avg return for 25 episodes: -114.04\t Episode return: -133.97\t steps: 145\t Total steps: 7491\n",
+      "Avg return for 25 episodes: -120.641\t Episode return: -258.953\t steps: 1485\t Total steps: 8976\n",
+      "Avg return for 25 episodes: -120.846\t Episode return: -144.915\t steps: 237\t Total steps: 9213\n",
+      "Avg return for 25 episodes: -121.239\t Episode return: -133.779\t steps: 234\t Total steps: 9447\n",
+      "Avg return for 25 episodes: -120.757\t Episode return: -112.651\t steps: 102\t Total steps: 9549\n",
+      "Avg return for 25 episodes: -121.789\t Episode return: -126.62\t steps: 91\t Total steps: 9640\n",
+      "Avg return for 25 episodes: -122.486\t Episode return: -116.488\t steps: 66\t Total steps: 9706\n",
+      "Avg return for 25 episodes: -123.047\t Episode return: -118.437\t steps: 73\t Total steps: 9779\n",
+      "Avg return for 25 episodes: -123.508\t Episode return: -118.489\t steps: 75\t Total steps: 9854\n",
+      "Avg return for 25 episodes: -120.509\t Episode return: -124.682\t steps: 124\t Total steps: 9978\n",
+      "Avg return for 25 episodes: -120.662\t Episode return: -111.174\t steps: 40\t Total steps: 10018\n",
+      "Avg return for 25 episodes: -120.844\t Episode return: -116.706\t steps: 66\t Total steps: 10084\n",
+      "Avg return for 25 episodes: -120.905\t Episode return: -125.516\t steps: 84\t Total steps: 10168\n",
+      "Avg return for 25 episodes: -121.322\t Episode return: -118.901\t steps: 70\t Total steps: 10238\n",
+      "Avg return for 25 episodes: -121.794\t Episode return: -122.065\t steps: 82\t Total steps: 10320\n",
+      "Avg return for 25 episodes: -122.388\t Episode return: -117.7\t steps: 61\t Total steps: 10381\n",
+      "Avg return for 25 episodes: -123.064\t Episode return: -123.132\t steps: 92\t Total steps: 10473\n",
+      "Avg return for 25 episodes: -123.609\t Episode return: -119.889\t steps: 76\t Total steps: 10549\n",
+      "Avg return for 25 episodes: -124.11\t Episode return: -118.857\t steps: 69\t Total steps: 10618\n",
+      "Avg return for 25 episodes: -124.305\t Episode return: -111.068\t steps: 39\t Total steps: 10657\n",
+      "Avg return for 25 episodes: -125.163\t Episode return: -127.202\t steps: 86\t Total steps: 10743\n",
+      "Avg return for 25 episodes: -127.566\t Episode return: -165.67\t steps: 1600\t Total steps: 12343\n",
+      "Avg return for 25 episodes: -128.263\t Episode return: -123.343\t steps: 47\t Total steps: 12390\n",
+      "Avg return for 25 episodes: -128.682\t Episode return: -117.453\t steps: 40\t Total steps: 12430\n",
+      "Avg return for 25 episodes: -129.141\t Episode return: -120.866\t steps: 43\t Total steps: 12473\n",
+      "Avg return for 25 episodes: -128.541\t Episode return: -118.971\t steps: 149\t Total steps: 12622\n",
+      "Avg return for 25 episodes: -123.079\t Episode return: -122.393\t steps: 44\t Total steps: 12666\n",
+      "Avg return for 25 episodes: -126.113\t Episode return: -220.778\t steps: 1022\t Total steps: 13688\n",
+      "Avg return for 25 episodes: -125.647\t Episode return: -122.135\t steps: 44\t Total steps: 13732\n"
      ]
     }
    ],
    "source": [
-    "// Training the agent for a total of at least 3000000 steps.\n",
-    "train(3000000)"
+    "// Training the agent for a total of at least 20000 steps.\n",
+    "train(20000)"
    ]
   },
   {
@@ -298,33 +427,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Total steps: 200\t Total reward: -1183.11\n",
-      "https://gym.kurg.org/3b171aaeb3d74/output.webm"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1132682bf13484bbee8d2bf3ea5d9b7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "agent.Deterministic() = true;\n",
     "\n",
@@ -349,7 +454,7 @@
     "  agent.SelectAction();\n",
     "\n",
     "  // Action to take, decided by the policy.\n",
-    "  arma::mat action = {double(agent.Action().action[0] * 2)};\n",
+    "  arma::mat action = {agent.Action().action};\n",
     "\n",
     "  envTest.step(action);\n",
     "  totalReward += envTest.reward;\n",
@@ -383,64 +488,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training for 40000 steps.\n",
-      "Avg return in last 25 episodes: -623.784\t Episode return: -134.917\t Total steps: 5600\n",
-      "Avg return in last 25 episodes: -600.928\t Episode return: -243.994\t Total steps: 6400\n",
-      "Avg return in last 25 episodes: -510.564\t Episode return: -234.78\t Total steps: 7200\n",
-      "Avg return in last 25 episodes: -415.94\t Episode return: -0.388022\t Total steps: 8000\n",
-      "Avg return in last 25 episodes: -336.953\t Episode return: -129.554\t Total steps: 8800\n",
-      "Avg return in last 25 episodes: -301.628\t Episode return: -126.201\t Total steps: 9600\n",
-      "Avg return in last 25 episodes: -231.332\t Episode return: -131.894\t Total steps: 10400\n",
-      "Avg return in last 25 episodes: -178.349\t Episode return: -253.626\t Total steps: 11200\n",
-      "Avg return in last 25 episodes: -168.248\t Episode return: -242.201\t Total steps: 12000\n",
-      "Avg return in last 25 episodes: -177.98\t Episode return: -119.084\t Total steps: 12800\n",
-      "Avg return in last 25 episodes: -177.816\t Episode return: -123.397\t Total steps: 13600\n",
-      "Avg return in last 25 episodes: -208.699\t Episode return: -492.161\t Total steps: 14400\n",
-      "Avg return in last 25 episodes: -194.5\t Episode return: -1.40593\t Total steps: 15200\n",
-      "Avg return in last 25 episodes: -192.542\t Episode return: -228.886\t Total steps: 16000\n",
-      "Avg return in last 25 episodes: -231.122\t Episode return: -334.881\t Total steps: 16800\n",
-      "Avg return in last 25 episodes: -206.807\t Episode return: -125.605\t Total steps: 17600\n",
-      "Avg return in last 25 episodes: -252.827\t Episode return: -0.865305\t Total steps: 18400\n",
-      "Avg return in last 25 episodes: -365.02\t Episode return: -475.576\t Total steps: 19200\n",
-      "Avg return in last 25 episodes: -354.857\t Episode return: -116.037\t Total steps: 20000\n",
-      "Avg return in last 25 episodes: -359.892\t Episode return: -244.444\t Total steps: 20800\n",
-      "Avg return in last 25 episodes: -334.737\t Episode return: -246.958\t Total steps: 21600\n",
-      "Avg return in last 25 episodes: -336.934\t Episode return: -2.24987\t Total steps: 22400\n",
-      "Avg return in last 25 episodes: -299.822\t Episode return: -234.806\t Total steps: 23200\n",
-      "Avg return in last 25 episodes: -188.558\t Episode return: -124.535\t Total steps: 24000\n",
-      "Avg return in last 25 episodes: -160.135\t Episode return: -123.951\t Total steps: 24800\n",
-      "Avg return in last 25 episodes: -165.263\t Episode return: -123.707\t Total steps: 25600\n",
-      "Avg return in last 25 episodes: -155.278\t Episode return: -1.49796\t Total steps: 26400\n",
-      "Avg return in last 25 episodes: -144.217\t Episode return: -234.275\t Total steps: 27200\n",
-      "Avg return in last 25 episodes: -149.474\t Episode return: -240.818\t Total steps: 28000\n",
-      "Avg return in last 25 episodes: -177.878\t Episode return: -367.93\t Total steps: 28800\n",
-      "Avg return in last 25 episodes: -173.281\t Episode return: -125.279\t Total steps: 29600\n",
-      "Avg return in last 25 episodes: -178.112\t Episode return: -123.648\t Total steps: 30400\n",
-      "Avg return in last 25 episodes: -194.985\t Episode return: -121.063\t Total steps: 31200\n",
-      "Avg return in last 25 episodes: -228.646\t Episode return: -120.35\t Total steps: 32000\n",
-      "Avg return in last 25 episodes: -224.363\t Episode return: -122.863\t Total steps: 32800\n",
-      "Avg return in last 25 episodes: -205.555\t Episode return: -121.354\t Total steps: 33600\n",
-      "Avg return in last 25 episodes: -205.607\t Episode return: -239.663\t Total steps: 34400\n",
-      "Avg return in last 25 episodes: -257.053\t Episode return: -250.75\t Total steps: 35200\n",
-      "Avg return in last 25 episodes: -290.906\t Episode return: -120.127\t Total steps: 36000\n",
-      "Avg return in last 25 episodes: -252.13\t Episode return: -1.45778\t Total steps: 36800\n",
-      "Avg return in last 25 episodes: -256.027\t Episode return: -3.13895\t Total steps: 37600\n",
-      "Avg return in last 25 episodes: -260.436\t Episode return: -123.685\t Total steps: 38400\n",
-      "Avg return in last 25 episodes: -279.927\t Episode return: -114.913\t Total steps: 39200\n",
-      "Avg return in last 25 episodes: -233.131\t Episode return: -231.111\t Total steps: 40000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "// Training the same agent for a total of at least 600000 steps.\n",
-    "train(40000)"
+    "// Training the same agent for a total of at least 100000 steps.\n",
+    "train(100000)"
    ]
   },
   {
@@ -452,33 +505,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Total steps: 200\t Total reward: -234.036\n",
-      "https://gym.kurg.org/6a964dee60c14/output.webm"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3050c51d9b014a13a6f4e3ed3e9bcfb6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "agent.Deterministic() = true;\n",
     "\n",
